--- a/student-dashboard.html
+++ b/student-dashboard.html
@@ -86,7 +86,22 @@ function checkStudentCode(studentName, redirectPage) {
 <a href="#" onclick="checkStudentCode('P6 Student 2','p6-student2.html')">P6 Student 2</a>
 <a href="#" onclick="checkStudentCode('P6 Student 3','p6-student3.html')">P6 Student 3</a>
 <a href="#" onclick="checkStudentCode('P6 Student 4','p6-student4.html')">P6 Student 4</a>
-<!-- ...continue for all 20 P6 students -->
+<a href="#" onclick="checkStudentCode('P6 Student 5','p6-student5.html')">P6 Student 5</a>
+<a href="#" onclick="checkStudentCode('P6 Student 6','p6-student6.html')">P6 Student 6</a>
+<a href="#" onclick="checkStudentCode('P6 Student 7','p6-student7.html')">P6 Student 7</a>
+<a href="#" onclick="checkStudentCode('P6 Student 8','p6-student8.html')">P6 Student 8</a>
+<a href="#" onclick="checkStudentCode('P6 Student 9','p6-student9.html')">P6 Student 9</a>
+<a href="#" onclick="checkStudentCode('P6 Student 10','p6-student10.html')">P6 Student 10</a>
+<a href="#" onclick="checkStudentCode('P6 Student 11','p6-student11.html')">P6 Student 11</a>
+<a href="#" onclick="checkStudentCode('P6 Student 12','p6-student12.html')">P6 Student 12</a>
+<a href="#" onclick="checkStudentCode('P6 Student 13','p6-student13.html')">P6 Student 13</a>
+<a href="#" onclick="checkStudentCode('P6 Student 14','p6-student14.html')">P6 Student 14</a>
+<a href="#" onclick="checkStudentCode('P6 Student 15','p6-student15.html')">P6 Student 15</a>
+<a href="#" onclick="checkStudentCode('P6 Student 16','p6-student16.html')">P6 Student 16</a>
+<a href="#" onclick="checkStudentCode('P6 Student 17','p6-student17.html')">P6 Student 17</a>
+<a href="#" onclick="checkStudentCode('P6 Student 18','p6-student18.html')">P6 Student 18</a>
+<a href="#" onclick="checkStudentCode('P6 Student 19','p6-student19.html')">P6 Student 19</a>
+<a href="#" onclick="checkStudentCode('P6 Student 20','p6-student20.html')">P6 Student 20</a>
 </div>
 </div>
 
@@ -97,7 +112,22 @@ function checkStudentCode(studentName, redirectPage) {
 <a href="#" onclick="checkStudentCode('P7 Student 2','p7-student2.html')">P7 Student 2</a>
 <a href="#" onclick="checkStudentCode('P7 Student 3','p7-student3.html')">P7 Student 3</a>
 <a href="#" onclick="checkStudentCode('P7 Student 4','p7-student4.html')">P7 Student 4</a>
-<!-- ...continue for all 20 P7 students -->
+<a href="#" onclick="checkStudentCode('P7 Student 5','p7-student5.html')">P7 Student 5</a>
+<a href="#" onclick="checkStudentCode('P7 Student 6','p7-student6.html')">P7 Student 6</a>
+<a href="#" onclick="checkStudentCode('P7 Student 7','p7-student7.html')">P7 Student 7</a>
+<a href="#" onclick="checkStudentCode('P7 Student 8','p7-student8.html')">P7 Student 8</a>
+<a href="#" onclick="checkStudentCode('P7 Student 9','p7-student9.html')">P7 Student 9</a>
+<a href="#" onclick="checkStudentCode('P7 Student 10','p7-student10.html')">P7 Student 10</a>
+<a href="#" onclick="checkStudentCode('P7 Student 11','p7-student11.html')">P7 Student 11</a>
+<a href="#" onclick="checkStudentCode('P7 Student 12','p7-student12.html')">P7 Student 12</a>
+<a href="#" onclick="checkStudentCode('P7 Student 13','p7-student13.html')">P7 Student 13</a>
+<a href="#" onclick="checkStudentCode('P7 Student 14','p7-student14.html')">P7 Student 14</a>
+<a href="#" onclick="checkStudentCode('P7 Student 15','p7-student15.html')">P7 Student 15</a>
+<a href="#" onclick="checkStudentCode('P7 Student 16','p7-student16.html')">P7 Student 16</a>
+<a href="#" onclick="checkStudentCode('P7 Student 17','p7-student17.html')">P7 Student 17</a>
+<a href="#" onclick="checkStudentCode('P7 Student 18','p7-student18.html')">P7 Student 18</a>
+<a href="#" onclick="checkStudentCode('P7 Student 19','p7-student19.html')">P7 Student 19</a>
+<a href="#" onclick="checkStudentCode('P7 Student 20','p7-student20.html')">P7 Student 20</a>
 </div>
 </div>
 </section>
