--- a/teachers.html
+++ b/teachers.html
@@ -1,1 +1,191 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Teachers & Staff - St Paul Learning Centre</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&display=swap" rel="stylesheet">
+<style>
+  body {
+    font-family: "Poppins", sans-serif;
+    margin:0;
+    background: linear-gradient(135deg,#0f172a,#1e293b);
+    color:#fff;
+  }
 
+  header {
+    background:#001f3f;
+    text-align:center;
+    padding:25px 10px;
+    box-shadow:0 0 15px rgba(0,255,255,0.4);
+  }
+  header h1 { font-size:28px; margin:0; letter-spacing:1px; }
+  header .motto { font-size:16px; color:#00ffff; margin-top:5px; }
+
+  .navbar { background:#003366; color:#fff; padding:12px; display:flex; justify-content:space-between; align-items:center; }
+  .menu-icon { font-size:26px; cursor:pointer; }
+
+  .side-menu { height:100%; width:0; position:fixed; z-index:1; top:0; left:0; background:#001f3f; overflow-x:hidden; transition:0.4s; padding-top:60px; }
+  .side-menu a { padding:12px 32px; text-decoration:none; font-size:20px; color:#00ffff; display:block; transition:0.3s; }
+  .side-menu a:hover { background:#004080; color:#fff; }
+  .side-menu .close-btn { position:absolute; top:0; right:25px; font-size:36px; cursor:pointer; }
+
+  .welcome-message { text-align:center; font-size:24px; margin:25px 0; font-weight:600; color:#00ffff; }
+
+  .teacher-section { width:90%; max-width:900px; margin:30px auto; background:rgba(0,51,102,0.4); border-radius:15px; padding:20px; box-shadow:0 0 15px rgba(0,255,255,0.2); }
+  .teacher-section h3 { font-size:22px; margin-bottom:15px; color:#00ffff; text-shadow:0 0 5px cyan; }
+
+  .teacher-list { display:grid; grid-template-columns:repeat(auto-fit,minmax(200px,1fr)); gap:20px; }
+  
+  .teacher-card {
+    background:#0077cc;
+    padding:15px;
+    border-radius:10px;
+    text-align:center;
+    transition: all 0.3s ease;
+    box-shadow: 0 0 5px cyan;
+  }
+  .teacher-card:hover {
+    background:#00b3ff;
+    box-shadow: 0 0 20px cyan;
+    transform: translateY(-5px);
+  }
+  
+  .teacher-card img {
+    width:100px;
+    height:100px;
+    border-radius:50%;
+    object-fit:cover;
+    border:3px solid #00ffff;
+    margin-bottom:10px;
+    transition: all 0.3s ease;
+  }
+  .teacher-card:hover img {
+    border-color:#fff;
+    transform: scale(1.1);
+  }
+
+  .teacher-card h4 { margin:0 0 8px 0; color:white; }
+  .teacher-card p { margin:2px 0; font-size:14px; color:#e0f7ff; }
+
+  footer { background:#001f3f; color:#aaa; text-align:center; padding:15px; font-size:14px; margin-top:40px; }
+</style>
+<script>
+function openMenu(){document.getElementById("sideMenu").style.width="250px";}
+function closeMenu(){document.getElementById("sideMenu").style.width="0";}
+</script>
+</head>
+<body>
+<header>
+<h1>St Paul Learning Centre</h1>
+<div class="motto">Strive For Success</div>
+<p>Meet our teachers and staff</p>
+</header>
+
+<div class="navbar">
+<h2>Teachers & Staff</h2>
+<span class="menu-icon" onclick="openMenu()">☰</span>
+</div>
+
+<nav id="sideMenu" class="side-menu">
+<a href="javascript:void(0)" class="close-btn" onclick="closeMenu()">✖</a>
+<a href="index.html">🏠 Home</a>
+<a href="class.html">🏫 Classes</a>
+<a href="resources.html">📘 Resources</a>
+<a href="timetable.html">🕓 Timetable</a>
+<a href="contact.html">📞 Contact</a>
+</nav>
+
+<section>
+<div class="welcome-message">📚 Our Dedicated Teachers & Staff</div>
+
+<!-- Head Teacher -->
+<div class="teacher-section">
+<h3>Head Teacher</h3>
+<div class="teacher-list">
+  <div class="teacher-card">
+    <img src="https://i.postimg.cc/T2nvV4Xb/headteacher.jpg" alt="Mrs. Jane Okello">
+    <h4>Mrs. Jane Okello</h4>
+    <p>Head Teacher</p>
+    <p>Oversees all classes and administration</p>
+  </div>
+</div>
+</div>
+
+<!-- Teachers -->
+<div class="teacher-section">
+<h3>Teachers</h3>
+<div class="teacher-list">
+  <div class="teacher-card">
+    <img src="https://i.postimg.cc/YqZf9F9c/johnkato.jpg" alt="Mr. John Kato">
+    <h4>Mr. John Kato</h4>
+    <p>Primary One</p>
+    <p>Mathematics & Science</p>
+  </div>
+  <div class="teacher-card">
+    <img src="https://i.postimg.cc/QtSC0k6B/gracenamata.jpg" alt="Ms. Grace Namata">
+    <h4>Ms. Grace Namata</h4>
+    <p>Primary Two</p>
+    <p>English & Social Studies</p>
+  </div>
+  <div class="teacher-card">
+    <img src="https://i.postimg.cc/Z5wP5hGd/peterluwero.jpg" alt="Mr. Peter Luwero">
+    <h4>Mr. Peter Luwero</h4>
+    <p>Primary Three</p>
+    <p>Mathematics & ICT</p>
+  </div>
+  <div class="teacher-card">
+    <img src="https://i.postimg.cc/dV1Jj4tF/roseachan.jpg" alt="Ms. Rose Achan">
+    <h4>Ms. Rose Achan</h4>
+    <p>Primary Four</p>
+    <p>Science & English</p>
+  </div>
+  <div class="teacher-card">
+    <img src="https://i.postimg.cc/sX3KjqbZ/samuelowor.jpg" alt="Mr. Samuel Owor">
+    <h4>Mr. Samuel Owor</h4>
+    <p>Primary Five</p>
+    <p>Mathematics & Social Studies</p>
+  </div>
+  <div class="teacher-card">
+    <img src="https://i.postimg.cc/1t5pxvrr/lydianansubuga.jpg" alt="Ms. Lydia Nansubuga">
+    <h4>Ms. Lydia Nansubuga</h4>
+    <p>Primary Six</p>
+    <p>English & Science</p>
+  </div>
+  <div class="teacher-card">
+    <img src="https://i.postimg.cc/ZY6p5K7d/michaelsenyonjo.jpg" alt="Mr. Michael Ssenyonjo">
+    <h4>Mr. Michael Ssenyonjo</h4>
+    <p>Primary Seven</p>
+    <p>Mathematics & ICT</p>
+  </div>
+</div>
+</div>
+
+<!-- Staff -->
+<div class="teacher-section">
+<h3>Support Staff</h3>
+<div class="teacher-list">
+  <div class="teacher-card">
+    <img src="https://i.postimg.cc/Y0p5QqZq/davidmukasa.jpg" alt="Mr. David Mukasa">
+    <h4>Mr. David Mukasa</h4>
+    <p>Administrator</p>
+  </div>
+  <div class="teacher-card">
+    <img src="https://i.postimg.cc/ZYbG2Q3X/sarahnakitende.jpg" alt="Ms. Sarah Nakitende">
+    <h4>Ms. Sarah Nakitende</h4>
+    <p>Librarian</p>
+  </div>
+  <div class="teacher-card">
+    <img src="https://i.postimg.cc/JhG6vS3q/petermwesige.jpg" alt="Mr. Peter Mwesige">
+    <h4>Mr. Peter Mwesige</h4>
+    <p>Accountant</p>
+  </div>
+</div>
+</div>
+</section>
+
+<footer>
+&copy; 2025 St Paul Learning Centre. All rights reserved.
+</footer>
+</body>
+  </html>
