--- a/index.html
+++ b/index.html
@@ -1,189 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>St Paul Learning Centre</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
-<style>
-  body {
-    font-family: "Inter", sans-serif;
-    margin: 0;
-    background: linear-gradient(135deg, #0f172a, #1e293b);
-    color: #fff;
-  }
-  header {
-    background: #001f3f;
-    text-align: center;
-    padding: 25px 10px;
-    box-shadow: 0 0 15px rgba(0,255,255,0.4);
-  }
-  header h1 { font-size: 28px; margin:0; }
-  header .motto { font-size: 16px; color: #00ffff; margin-top: 5px; }
+    <meta name="google-site-verification" content="R3kH-LbUwNa0uZwAc91SCEMZh46mtNGdyCv-h7_bMow" />
+    <meta charset="UTF-8">
+    <title>St Paul Learning Centre</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  .navbar {
-    background: #003366;
-    color: #fff;
-    padding: 12px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .navbar-center { display:flex; align-items:center; gap: 10px; }
-  .school-logo { width: 50px; height: 50px; object-fit: cover; border-radius: 10px; }
-  .menu-btn { font-size: 26px; cursor: pointer; }
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 
-  .side-menu {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: #001f3f;
-    overflow-x: hidden;
-    transition: 0.4s;
-    padding-top: 60px;
-    z-index: 100;
-  }
-  .side-menu a {
-    padding: 12px 32px;
-    text-decoration: none;
-    font-size: 20px;
-    color: #00ffff;
-    display: block;
-    transition: 0.3s;
-  }
-  .side-menu a:hover { background: #004080; color: #fff; }
-  .side-menu .close-btn { position: absolute; top: 0; right: 25px; font-size: 36px; cursor: pointer; }
+    <!-- Firebase (for other pages) -->
+    <script type="module">
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+      import { getAuth } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
 
-  section { width: 90%; max-width: 1200px; margin: 30px auto; }
+      // Firebase config
+      const firebaseConfig = {
+        apiKey: "AIzaSyBvLXOx9N88hBBLMHVCcEM3zBK-AYfQI_o",
+        authDomain: "my-school-st-paul-1455a.firebaseapp.com",
+        projectId: "my-school-st-paul-1455a",
+      };
 
-  h2 { font-size: 28px; color: #00ffff; margin-bottom: 10px; }
-  h3 { font-size: 22px; color: #00ffff; margin-top: 30px; margin-bottom: 10px; }
-
-  .gallery {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 15px;
-    margin-bottom: 20px;
-  }
-  .gallery img {
-    width: calc(33% - 10px);
-    border-radius: 12px;
-    object-fit: cover;
-    box-shadow: 0 0 15px rgba(0,255,255,0.3);
-  }
-
-  .feature-list { list-style: none; padding-left: 0; }
-  .feature-list li {
-    margin-bottom: 12px;
-    font-size: 16px;
-  }
-  .feature-list a { color: #00ffff; text-decoration: none; transition: 0.3s; }
-  .feature-list a:hover { color: #fff; text-decoration: underline; }
-
-  /* Staff Highlight Cards */
-  .staff-section { display: grid; grid-template-columns: repeat(auto-fit,minmax(220px,1fr)); gap: 20px; margin-top: 20px; }
-  .staff-card {
-    background: #0077cc;
-    padding: 15px;
-    border-radius: 12px;
-    text-align: center;
-    transition: all 0.3s ease;
-    box-shadow: 0 0 10px cyan;
-  }
-  .staff-card:hover { background: #00b3ff; transform: translateY(-5px); box-shadow: 0 0 20px cyan; }
-  .staff-card img { width: 100px; height: 100px; border-radius: 50%; object-fit: cover; border: 3px solid #00ffff; margin-bottom: 10px; }
-  .staff-card h4 { margin: 5px 0; color: #fff; }
-  .staff-card p { margin: 2px 0; font-size: 14px; color: #e0f7ff; }
-
-  footer {
-    background: #001f3f;
-    color: #aaa;
-    text-align: center;
-    padding: 15px;
-    margin-top: 40px;
-  }
-</style>
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const auth = getAuth(app);
+      // 👆 index.html does not restrict — it stays public
+    </script>
 </head>
 <body>
-  <div class="navbar">
-    <span class="menu-btn" onclick="openMenu()">☰</span>
-    <div class="navbar-center">
-      <img src="https://i.postimg.cc/t4yDG3Fq/Mon-21-07-2025-16-26-06.png" alt="School Logo" class="school-logo">
-      <span class="logo-text">St Paul Learning Centre</span>
-    </div>
-  </div>
-
-  <nav id="sideMenu" class="side-menu">
-    <a href="javascript:void(0)" class="close-btn" onclick="closeMenu()">&times;</a>
-    <a href="index.html">News & Announcements</a>
-    <a href="student-portal.html">Student Portal</a>
-    <a href="admissions.html">Admissions</a>
-    <a href="resources.html">Resources</a>
-    <a href="showcase.html">Showcase</a>
-    <a href="contact.html">Contact</a>
-    <a href="timetable.html">Timetable</a>
-    <a href="teacher-resources.html">Teacher Resources</a>
-    <a href="parent-portal.html">Parent Portal</a>
-  </nav>
-
-  <header>
-    <h1>St Paul Learning Centre</h1>
-    <div class="motto">Strive For Success</div>
-    <p>Empowering students, connecting families, supporting teachers.</p>
-  </header>
-
-  <section>
-    <h2>Welcome to St Paul Learning Centre</h2>
-    <p>
-      St Paul Learning Centre is dedicated to nurturing every student’s potential and fostering a vibrant, supportive community for families and educators. Explore our portals, resources, and achievements.
-    </p>
-
-    <div class="gallery">
-      <img src="https://images.unsplash.com/photo-1503676382389-4809596d5290?auto=format&fit=crop&w=400&q=80" alt="School Hall">
-      <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=400&q=80" alt="Classroom">
-      <img src="https://images.unsplash.com/photo-1513258496099-48168024aec0?auto=format&fit=crop&w=400&q=80" alt="Library">
-      <img src="https://images.unsplash.com/photo-1555685812-4b943f1d0d11?auto=format&fit=crop&w=400&q=80" alt="Science Lab">
-      <img src="https://images.unsplash.com/photo-1580584123185-65c5b95c9a9b?auto=format&fit=crop&w=400&q=80" alt="Sports">
+    <!-- Top Bar -->
+    <div class="navbar">
+        <!-- Hamburger Menu Button on the LEFT -->
+        <span class="menu-btn" onclick="openMenu()" tabindex="0" aria-label="Main menu">&#9776;</span>
+        <div class="navbar-center">
+            <img src="https://i.postimg.cc/t4yDG3Fq/Mon-21-07-2025-16-26-06.png" alt="School Logo" class="school-logo">
+            <span class="logo-text">St Paul Learning Centre</span>
+        </div>
     </div>
 
-    <h3>Quick Access</h3>
-    <ul class="feature-list">
-      <li><a href="student-portal.html">Student Portal</a> – Access learning materials and timetable</li>
-      <li><a href="parent-portal.html">Parent Portal</a> – Monitor progress and communicate with teachers</li>
-      <li><a href="admissions.html">Admissions</a> – Join our community</li>
-      <li><a href="resources.html">Resources</a> – Study tools and support</li>
-      <li><a href="showcase.html">Showcase</a> – Discover our achievements and history</li>
-      <li><a href="contact.html">Contact</a> – Get in touch</li>
-    </ul>
+    <!-- Sidebar Menu -->
+    <nav id="sideMenu" class="side-menu" aria-label="Sidebar navigation">
+        <a href="javascript:void(0)" class="close-btn" onclick="closeMenu()" tabindex="0" aria-label="Close menu">&times;</a>
+        <a href="index.html">News & Announcements</a>
+        <a href="student-portal.html">Student Portal</a>
+        <a href="admissions.html">Admissions</a>
+        <a href="resources.html">Resources</a>
+        <a href="showcase.html">Showcase</a>
+        <a href="contact.html">Contact</a>
+        <a href="teachers.html">Teachers</a>
+        <a href="teacher-resources.html">Teacher Resources</a>
+        <a href="parent-portal.html">Parent Portal</a>
+    </nav>
 
-    <h3>Our Dedicated Staff</h3>
-    <div class="staff-section">
-      <div class="staff-card">
-        <img src="https://i.postimg.cc/T2nvV4Xb/headteacher.jpg" alt="Mrs. Jane Okello">
-        <h4>Mrs. Jane Okello</h4>
-        <p>Head Teacher</p>
-        <p>Oversees administration and all classes</p>
-      </div>
-      <div class="staff-card">
-        <img src="https://i.postimg.cc/YqZf9F9c/johnkato.jpg" alt="Mr. John Kato">
-        <h4>Mr. John Kato</h4>
-        <p>Primary One</p>
-        <p>Mathematics & Science</p>
-      </div>
-      <div class="staff-card">
-        <img src="https://i.postimg.cc/QtSC0k6B/gracenamata.jpg" alt="Ms. Grace Namata">
-        <h4>Ms. Grace Namata</h4>
-        <p>Primary Two</p>
-        <p>English & Social Studies</p>
-      </div>
-      <div class="staff-card">
-        <img src="https://images.unsplash.com/photo-1607746882042-944635dfe10e?auto=format&fit=crop&w=400&q=80" alt="Mr. Peter Luwero">
-        <h4>Mr. Peter Luwero</h4>
-        <p>Primary Three</p>
-        <p>Mathematics & ICT</p>
-      </div>
-      <div class="staff-card">
-        <img src="https://images.unsplash.com
+    <header>
+        <h1>St Paul Learning Centre</h1>
+        <div class="motto">Strive For Success</div>
+        <p>Empowering students, connecting families, supporting teachers.</p>
+    </header>
+
+    <section>
+        <h2>Welcome to St Paul Learning Centre</h2>
+        <p>
+            St Paul Learning Centre is dedicated to nurturing every student’s potential and fostering a vibrant, supportive community for families and educators. Explore our student and parent portals, discover resources, view our school showcase, and stay updated with news and announcements.
+        </p>
+
+        <div class="gallery">
+            <img src="https://images.unsplash.com/photo-1503676382389-4809596d5290?auto=format&fit=crop&w=400&q=80" alt="School Hall">
+            <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=400&q=80" alt="Classroom">
+            <img src="https://images.unsplash.com/photo-1513258496099-48168024aec0?auto=format&fit=crop&w=400&q=80" alt="Library">
+        </div>
+
+        <h3>Quick Access</h3>
+        <ul class="feature-list">
+            <li><a href="student-portal.html">Student Portal</a> – Access learning materials and your timetable</li>
+            <li><a href="parent-portal.html">Parent Portal</a> – Monitor progress and communicate with teachers</li>
+            <li><a href="admissions.html">Admissions</a> – Join our community</li>
+            <li><a href="resources.html">Resources</a> – Study tools and support</li>
+            <li><a href="showcase.html">Showcase</a> – Discover our achievements and history</li>
+            <li><a href="contact.html">Contact</a> – Get in touch with us</li>
+        </ul>
+    </section>
+    <footer>
+        &copy; 2025 St Paul Learning Centre. All rights reserved.
+    </footer>
+
+    <!-- Simple JS for menu toggle -->
+    <script>
+    function openMenu() {
+        document.getElementById("sideMenu").style.width = "260px";
+    }
+    function closeMenu() {
+        document.getElementById("sideMenu").style.width = "0";
+    }
+
+    // Accessibility: Close menu on Escape key
+    document.addEventListener('keydown', function(event) {
+        if (event.key === "Escape") {
+            closeMenu();
+        }
+    });
+    </script>
+</body>
+</html>
