--- a/admissions.html
+++ b/admissions.html
@@ -15,7 +15,13 @@
 </script>
 
 <style>
-/* Navbar Styling */
+/* 🌐 Navbar Styling */
+body {
+  margin: 0;
+  font-family: 'Poppins', sans-serif;
+  background-color: #f9f9f9;
+}
+
 .navbar {
   display: flex;
   align-items: center;
@@ -23,53 +29,82 @@
   background-color: #004080;
   padding: 10px 15px;
   color: white;
+  position: relative;
+  z-index: 2;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+}
+
+.menu-btn {
+  font-size: 24px;
+  cursor: pointer;
+  color: white;
 }
 
 .navbar-center {
   display: flex;
   align-items: center;
-  gap: 10px;
+  justify-content: center;
+  flex: 1;
+  text-align: center;
+  position: relative;
 }
 
 .school-logo {
-  width: 60px;
+  width: 70px;
   height: auto;
-  border-radius: 8px;
+  border-radius: 10px;
   cursor: pointer;
-  transition: transform 0.3s ease;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .school-logo:hover {
-  transform: scale(1.08);
+  transform: scale(1.1);
+  box-shadow: 0 0 15px #00ccff;
 }
 
-/* Sidebar Menu */
+.logo-text {
+  font-size: 20px;
+  font-weight: bold;
+  margin-left: 10px;
+}
+
+/* 📱 Sidebar Menu */
 .side-menu {
   height: 100%;
   width: 0;
   position: fixed;
-  z-index: 1;
+  z-index: 10;
   top: 0;
   left: 0;
-  background-color: #111;
+  background-color: #002b5c;
   overflow-x: hidden;
-  transition: 0.4s;
+  transition: width 0.4s ease;
   padding-top: 60px;
 }
 
 .side-menu a {
-  padding: 10px 25px;
+  padding: 15px 30px;
   text-decoration: none;
   color: white;
+  font-size: 18px;
   display: block;
   transition: 0.3s;
 }
 
 .side-menu a:hover {
-  background-color: #575757;
+  background-color: #0056b3;
 }
 
-/* Simple spinner CSS animation */
+.side-menu .close-btn {
+  position: absolute;
+  top: 10px;
+  right: 25px;
+  font-size: 36px;
+  color: white;
+  cursor: pointer;
+}
+
+/* 🔄 Spinner Animation */
 .spinner {
   border: 5px solid #f3f3f3;
   border-top: 5px solid #3498db;
@@ -85,12 +120,13 @@
   100% { transform: rotate(360deg); }
 }
 
-/* Optional: style message */
+/* 💬 Form Message */
 #admissionForm p {
   margin-top: 10px;
   font-weight: 600;
 }
 
+/* 📩 Footer */
 footer {
   text-align: center;
   margin-top: 30px;
@@ -102,7 +138,7 @@ footer {
 </head>
 <body>
 
-<!-- Top Navbar -->
+<!-- 🏫 Top Navbar -->
 <div class="navbar">
   <span class="menu-btn" onclick="openMenu()">&#9776;</span>
   <div class="navbar-center">
@@ -114,7 +150,7 @@ footer {
   </div>
 </div>
 
-<!-- Sidebar Menu -->
+<!-- 📖 Sidebar Menu -->
 <nav id="sideMenu" class="side-menu">
   <a href="javascript:void(0)" class="close-btn" onclick="closeMenu()">&times;</a>
   <a href="index.html">News & Announcements</a>
@@ -128,8 +164,8 @@ footer {
   <a href="parent-portal.html">Parent Portal</a>
 </nav>
 
-<!-- Main Section -->
-<section>
+<!-- 📋 Main Section -->
+<section style="padding: 20px;">
   <h2>Online Admission Form</h2>
   <form class="admission-form" id="admissionForm">
     <input type="text" name="title" placeholder="Title" required>
@@ -147,10 +183,12 @@ footer {
   </form>
 </section>
 
+<!-- ⚙️ Footer -->
 <footer>
   &copy; 2025 St Paul Learning Centre. All rights reserved.
 </footer>
 
+<!-- ⚡ JavaScript -->
 <script>
 function openMenu() {
   document.getElementById("sideMenu").style.width = "280px";
@@ -160,7 +198,7 @@ function closeMenu() {
   document.getElementById("sideMenu").style.width = "0";
 }
 
-// Form Submission
+// 📨 Form Submission
 document.getElementById('admissionForm').addEventListener('submit', function(event){
    event.preventDefault();
    const form = event.target;
