--- a/auth.html
+++ b/auth.html
@@ -6,33 +6,183 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      background: #f9f9f9;
+      color: #333;
+    }
+
+    /* 🔵 Navbar */
+    .navbar {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      background-color: #004080;
+      padding: 10px 15px;
+      color: white;
+      position: relative;
+      z-index: 2;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+    }
+
+    .menu-btn {
+      font-size: 24px;
+      cursor: pointer;
+      color: white;
+    }
+
+    .navbar-center {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex: 1;
+      text-align: center;
+      position: relative;
+    }
+
+    .school-logo {
+      width: 70px;
+      height: auto;
+      border-radius: 10px;
+      cursor: pointer;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .school-logo:hover {
+      transform: scale(1.1);
+      box-shadow: 0 0 15px #00ccff;
+    }
+
+    .logo-text {
+      font-size: 20px;
+      font-weight: bold;
+      margin-left: 10px;
+    }
+
+    /* 📱 Side Menu */
+    .side-menu {
+      height: 100%;
+      width: 0;
+      position: fixed;
+      z-index: 10;
+      top: 0;
+      left: 0;
+      background-color: #002b5c;
+      overflow-x: hidden;
+      transition: width 0.4s ease;
+      padding-top: 60px;
+    }
+
+    .side-menu a {
+      padding: 15px 30px;
+      text-decoration: none;
+      color: white;
+      font-size: 18px;
+      display: block;
+      transition: 0.3s;
+    }
+
+    .side-menu a:hover {
+      background-color: #0056b3;
+    }
+
+    .side-menu .close-btn {
+      position: absolute;
+      top: 10px;
+      right: 25px;
+      font-size: 36px;
+      color: white;
+      cursor: pointer;
+    }
+
+    /* 🧩 Login Section */
+    section {
+      max-width: 400px;
+      margin: 60px auto;
+      padding: 20px;
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+      text-align: center;
+    }
+
+    section h2 {
+      color: #004080;
+      margin-bottom: 20px;
+    }
+
+    input {
+      width: 90%;
+      padding: 10px;
+      margin: 10px 0;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      font-size: 16px;
+    }
+
+    button {
+      background-color: #004080;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      padding: 10px 20px;
+      font-size: 16px;
+      margin: 5px;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    button:hover {
+      background-color: #0059b3;
+    }
+
+    .forgot {
+      color: #004080;
+      cursor: pointer;
+      text-decoration: underline;
+    }
+
+    footer {
+      text-align: center;
+      margin-top: 40px;
+      padding: 15px;
+      background-color: #004080;
+      color: white;
+    }
+  </style>
 </head>
+
 <body>
-  <!-- Top Bar -->
+
+  <!-- 🏫 Top Navbar -->
   <div class="navbar">
-      <span class="menu-btn" onclick="openMenu()" tabindex="0">&#9776;</span>
-      <div class="navbar-center">
-          <img src="https://i.postimg.cc/t4yDG3Fq/Mon-21-07-2025-16-26-06.png" alt="School Logo" class="school-logo">
-          <span class="logo-text">St Paul Learning Centre</span>
-      </div>
+    <span class="menu-btn" onclick="openMenu()">&#9776;</span>
+    <div class="navbar-center">
+      <a href="https://nicholasbagenda.netlify.app" target="_blank">
+        <img src="https://i.postimg.cc/t4yDG3Fq/Mon-21-07-2025-16-26-06.png" alt="School Logo" class="school-logo">
+      </a>
+      <span class="logo-text">St Paul Learning Centre</span>
+    </div>
   </div>
 
-  <!-- Sidebar Menu -->
+  <!-- 📋 Sidebar Menu -->
   <nav id="sideMenu" class="side-menu">
-      <a href="javascript:void(0)" class="close-btn" onclick="closeMenu()">&times;</a>
-      <a href="index.html">News & Announcements</a>
-      <a href="student-portal.html">Student Portal</a>
-      <a href="admissions.html">Admissions</a>
-      <a href="resources.html">Resources</a>
-      <a href="showcase.html">Showcase</a>
-      <a href="contact.html">Contact</a>
-      <a href="timetable.html">Timetable</a>
-      <a href="teacher-resources.html">Teacher Resources</a>
-      <a href="parent-portal.html">Parent Portal</a>
+    <a href="javascript:void(0)" class="close-btn" onclick="closeMenu()">&times;</a>
+    <a href="index.html">News & Announcements</a>
+    <a href="student-portal.html">Student Portal</a>
+    <a href="admissions.html">Admissions</a>
+    <a href="resources.html">Resources</a>
+    <a href="showcase.html">Showcase</a>
+    <a href="contact.html">Contact</a>
+    <a href="class.html">Timetable</a>
+    <a href="teacher-resources.html">Teacher Resources</a>
+    <a href="parent-portal.html">Parent Portal</a>
   </nav>
 
-  <!-- Login / Signup Section -->
+  <!-- 🔐 Login / Signup -->
   <section>
     <h2>Login / Signup</h2>
     <input type="email" id="email" placeholder="Email" required><br>
@@ -50,13 +200,17 @@
     &copy; 2025 St Paul Learning Centre. All rights reserved.
   </footer>
 
-  <!-- Sidebar Toggle -->
+  <!-- ⚙️ Sidebar Toggle -->
   <script>
-    function openMenu() { document.getElementById("sideMenu").style.width = "260px"; }
-    function closeMenu() { document.getElementById("sideMenu").style.width = "0"; }
+    function openMenu() {
+      document.getElementById("sideMenu").style.width = "280px";
+    }
+    function closeMenu() {
+      document.getElementById("sideMenu").style.width = "0";
+    }
   </script>
 
-  <!-- Firebase Auth -->
+  <!-- 🔥 Firebase Authentication -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
     import { 
@@ -87,42 +241,42 @@
       });
     }
 
-    // Login with email/password
+    // 🧑‍🎓 Login
     window.login = function() {
       const email = document.getElementById("email").value;
       const password = document.getElementById("password").value;
       signInWithEmailAndPassword(auth, email, password)
         .then(userCred => {
           logUser(userCred.user.uid, userCred.user.email, "login");
-          window.location.href = "index.html"; // ✅ redirect to main page
+          window.location.href = "index.html";
         })
         .catch(err => document.getElementById("message").innerText = err.message);
     }
 
-    // Signup with email/password
+    // 🧾 Signup
     window.signup = function() {
       const email = document.getElementById("email").value;
       const password = document.getElementById("password").value;
       createUserWithEmailAndPassword(auth, email, password)
         .then(userCred => {
           logUser(userCred.user.uid, userCred.user.email, "signup");
-          window.location.href = "index.html"; // ✅ redirect to main page
+          window.location.href = "index.html";
         })
         .catch(err => document.getElementById("message").innerText = err.message);
     }
 
-    // Google Sign-in
+    // 🔑 Google Sign-in
     window.googleSignIn = function() {
       const provider = new GoogleAuthProvider();
       signInWithPopup(auth, provider)
         .then(result => {
           logUser(result.user.uid, result.user.email, "google-login");
-          window.location.href = "index.html"; // ✅ redirect to main page
+          window.location.href = "index.html";
         })
         .catch(err => document.getElementById("message").innerText = err.message);
     }
 
-    // Password Reset
+    // 📧 Password Reset
     window.resetPassword = function() {
       const email = document.getElementById("email").value;
       if (!email) {
@@ -135,4 +289,4 @@
     }
   </script>
 </body>
-  </html>
+</html>
