--- a/class.html
+++ b/class.html
@@ -26,70 +26,75 @@
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
     }
 
-    .logo {
-      font-size: 1.4rem;
-      font-weight: 600;
-      color: #fff;
-      letter-spacing: 1px;
-    }
-
-    nav {
+    /* Centered Logo with Image */
+    .logo-container {
       display: flex;
-      gap: 20px;
+      align-items: center;
+      justify-content: center;
+      flex: 1;
     }
 
-    nav a {
+    .school-logo {
+      width: 45px;
+      height: 45px;
+      border-radius: 50%;
+      margin-right: 10px;
+      object-fit: cover;
+      border: 2px solid white;
+    }
+
+    .logo-text {
+      font-size: 1.3rem;
+      font-weight: 700;
       color: white;
-      text-decoration: none;
-      font-weight: 500;
-      position: relative;
-      transition: color 0.3s ease;
+      letter-spacing: 0.5px;
     }
 
-    nav a::after {
-      content: "";
-      position: absolute;
-      bottom: -4px;
-      left: 0;
-      width: 0;
-      height: 2px;
-      background: white;
-      transition: width 0.3s ease;
-    }
-
-    nav a:hover::after {
-      width: 100%;
-    }
-
+    /* Menu Icon */
     .menu-toggle {
-      display: none;
       font-size: 1.8rem;
       cursor: pointer;
       color: white;
       transition: transform 0.3s ease;
     }
 
-    @media (max-width: 768px) {
-      nav {
-        display: none;
-        flex-direction: column;
-        background: #1e3a8a;
-        position: absolute;
-        top: 60px;
-        right: 20px;
-        padding: 15px;
-        border-radius: 10px;
-        width: 200px;
-        box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-      }
+    /* Sidebar Menu */
+    .side-menu {
+      height: 100%;
+      width: 0;
+      position: fixed;
+      top: 0;
+      left: 0;
+      background: #1e3a8a;
+      overflow-x: hidden;
+      transition: width 0.4s ease;
+      padding-top: 60px;
+      box-shadow: 2px 0 12px rgba(0, 0, 0, 0.5);
+      z-index: 2000;
+    }
 
-      nav.active {
-        display: flex;
-      }
+    .side-menu a {
+      display: block;
+      padding: 12px 30px;
+      text-decoration: none;
+      color: white;
+      font-size: 1rem;
+      font-weight: 500;
+      transition: 0.3s;
+    }
 
-      .menu-toggle {
-        display: block;
-      }
+    .side-menu a:hover {
+      background: #2563eb;
+      padding-left: 40px;
+    }
+
+    .side-menu .close-btn {
+      position: absolute;
+      top: 10px;
+      right: 20px;
+      font-size: 2rem;
+      color: white;
+      cursor: pointer;
     }
 
     /* Main Section */
@@ -138,21 +143,35 @@
       margin-top: 40px;
       font-size: 0.9rem;
     }
+
+    @media (max-width: 768px) {
+      .logo-text {
+        font-size: 1rem;
+      }
+    }
   </style>
 </head>
 <body>
   <header>
-    <div class="logo">St Paul Learning Centre</div>
-    <div class="menu-toggle" id="menuToggle">☰</div>
-    <nav id="navbar">
-      <a href="index.html">Home</a>
-      <a href="admissions.html">Admissions</a>
-      <a href="class.html" class="active">Classes</a>
-      <a href="teacher-resources.html">Teacher Resources</a>
-      <a href="parent-portal.html">Parent Portal</a>
-    </nav>
+    <div class="menu-toggle" onclick="openMenu()">☰</div>
+    <div class="logo-container">
+      <img src="https://i.postimg.cc/t4yDG3Fq/Mon-21-07-2025-16-26-06.png" alt="School Logo" class="school-logo">
+      <span class="logo-text">St Paul Learning Centre</span>
+    </div>
   </header>
 
+  <!-- Sidebar -->
+  <nav id="sideMenu" class="side-menu">
+    <span class="close-btn" onclick="closeMenu()">&times;</span>
+    <a href="index.html">Home</a>
+    <a href="admissions.html">Admissions</a>
+    <a href="class.html" class="active">Classes</a>
+    <a href="teacher-resources.html">Teacher Resources</a>
+    <a href="parent-portal.html">Parent Portal</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+
+  <!-- Main Section -->
   <section>
     <h2>Select Your Class</h2>
     <div class="class-grid">
@@ -171,13 +190,13 @@
   </footer>
 
   <script>
-    const menuToggle = document.getElementById('menuToggle');
-    const navbar = document.getElementById('navbar');
+    function openMenu() {
+      document.getElementById("sideMenu").style.width = "260px";
+    }
 
-    menuToggle.addEventListener('click', () => {
-      navbar.classList.toggle('active');
-      menuToggle.textContent = navbar.classList.contains('active') ? '✖' : '☰';
-    });
+    function closeMenu() {
+      document.getElementById("sideMenu").style.width = "0";
+    }
   </script>
 </body>
 </html>
