--- a/homework.html
+++ b/homework.html
@@ -4,7 +4,140 @@
 <meta charset="UTF-8">
 <title>Homework - St Paul Learning Centre</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="style.css">
+<style>
+  body {
+    margin: 0;
+    font-family: "Poppins", sans-serif;
+    background: linear-gradient(135deg, #0f172a, #1e293b);
+    color: white;
+    min-height: 100vh;
+  }
+
+  /* Top Navbar */
+  .navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: linear-gradient(90deg, #1e3a8a, #2563eb);
+    padding: 10px 20px;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.4);
+  }
+
+  .navbar-center {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .logo-link {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    transition: transform 0.3s ease;
+  }
+
+  .logo-link:hover {
+    transform: scale(1.05);
+  }
+
+  .school-logo {
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    margin-right: 10px;
+    object-fit: cover;
+    border: 2px solid white;
+  }
+
+  .logo-text {
+    font-size: 1.3rem;
+    font-weight: 700;
+    color: white;
+    letter-spacing: 0.5px;
+  }
+
+  .menu-btn {
+    font-size: 1.8rem;
+    cursor: pointer;
+    color: white;
+  }
+
+  /* Sidebar Menu */
+  .side-menu {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: #1e3a8a;
+    overflow-x: hidden;
+    transition: width 0.4s ease;
+    padding-top: 60px;
+    box-shadow: 2px 0 12px rgba(0, 0, 0, 0.5);
+    z-index: 2000;
+  }
+
+  .side-menu a {
+    display: block;
+    padding: 12px 30px;
+    text-decoration: none;
+    color: white;
+    font-size: 1rem;
+    font-weight: 500;
+    transition: 0.3s;
+  }
+
+  .side-menu a:hover {
+    background: #2563eb;
+    padding-left: 40px;
+  }
+
+  .side-menu .close-btn {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    font-size: 2rem;
+    color: white;
+    cursor: pointer;
+  }
+
+  /* Main Section */
+  section {
+    text-align: center;
+    padding: 50px 20px;
+  }
+
+  h2 {
+    color: #60a5fa;
+    margin-bottom: 30px;
+    font-size: 2rem;
+  }
+
+  ul {
+    max-width: 600px;
+    margin: auto;
+    text-align: left;
+    padding-left: 20px;
+  }
+
+  li {
+    margin-bottom: 12px;
+    font-size: 1.1rem;
+  }
+
+  footer {
+    text-align: center;
+    padding: 20px;
+    background: #1e3a8a;
+    color: white;
+    margin-top: 40px;
+    font-size: 0.9rem;
+  }
+</style>
 </head>
 <body>
 
@@ -12,8 +145,10 @@
 <div class="navbar">
   <span class="menu-btn" onclick="openMenu()">&#9776;</span>
   <div class="navbar-center">
-    <img src="logo.png" alt="School Logo" class="school-logo">
-    <span class="logo-text">St Paul Learning Centre</span>
+    <a href="https://nicholasbagenda.netlify.app" target="_blank" class="logo-link">
+      <img src="logo.png" alt="School Logo" class="school-logo">
+      <span class="logo-text">St Paul Learning Centre</span>
+    </a>
   </div>
 </div>
 
@@ -48,12 +183,8 @@
 </footer>
 
 <script>
-function openMenu() {
-  document.getElementById("sideMenu").style.width = "280px";
-}
-function closeMenu() {
-  document.getElementById("sideMenu").style.width = "0";
-}
+function openMenu() { document.getElementById("sideMenu").style.width = "280px"; }
+function closeMenu() { document.getElementById("sideMenu").style.width = "0"; }
 </script>
 
 </body>
